# yelp-review_binary

./: .dvcignore  .gitignore  .pre-commit-config.yaml  README.md  data.dvc  download_data.py  pyproject.toml
conf/: config.yaml
conf/infer/: infer.yaml
conf/logging/: logging.yaml
conf/model/: model.yaml
conf/module/: module.yaml
conf/random/: random.yaml
conf/training/: training.yaml
data/: data.dvc
models/: epoch=00-val_loss=0.1730.ckpt.dvc
remote/: remote.txt
yelp-review/: baseline_classifier.py  convert_to_onnx.py  data.py  infer.py  lstm_classifier.py  model.py  train.py
